[gd_scene load_steps=17 format=2]

[ext_resource path="res://Deep-Night/pixel-sky-backgrounds-byCaniaEast/nightbackgroundwithmoon.png" type="Texture" id=1]
[ext_resource path="res://UI/HeartsFrame1.png" type="Texture" id=2]
[ext_resource path="res://UI/HeartsFrame3.png" type="Texture" id=3]
[ext_resource path="res://Deep-Night/Player.png" type="Texture" id=4]
[ext_resource path="res://Deep-Night/Tileset.tres" type="TileSet" id=5]
[ext_resource path="res://Prefabs/Snake.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 6.75 )

[sub_resource type="Animation" id=7]
resource_name = "Fall_Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 74 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Fall_Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 64 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 60 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Jump_Left"
length = 0.943
step = 0.124
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.124, 0.248, 0.372, 0.496 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump_Right"
length = 0.943
step = 0.124
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.124, 0.248, 0.372, 0.496 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run_Left"
length = 0.943
step = 0.124
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.124, 0.248, 0.372, 0.496, 0.62, 0.744, 0.868 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run_Right"
length = 0.943
step = 0.124
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.124, 0.248, 0.372, 0.496, 0.62, 0.744, 0.868 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3.5, 8 )

[node name="Node2D" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0, 0 )

[node name="Nightbackgroundwithmoon" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 253, 190 )
scale = Vector2( 0.494531, 0.494531 )
texture = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 82, 257 )
scale = Vector2( 2, 2 )
script = ExtResource( 7 )
speedX = 5000.0
speedXJumping = 3000.0
jumpForce = 280.0
emptyHeart = ExtResource( 3 )
invulnerabilityDuration = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -0.5, 0.75 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 4 )
hframes = 10
vframes = 8
frame = 60

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/Fall_Left = SubResource( 7 )
anims/Fall_Right = SubResource( 8 )
anims/Idle = SubResource( 6 )
anims/Jump_Left = SubResource( 2 )
anims/Jump_Right = SubResource( 3 )
anims/Run_Left = SubResource( 4 )
anims/Run_Right = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 1, -37.5 )
current = true
drag_margin_h_enabled = true

[node name="RayCast2D" type="RayCast2D" parent="Player"]
enabled = true
cast_to = Vector2( 0, 15 )
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( -0.5, 2 )
shape = SubResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 65509, 16, 0, 65510, 16, 0, 65511, 16, 0, 65512, 16, 0, 65513, 16, 0, 65514, 16, 0, 65515, 16, 0, 65516, 16, 0, 65517, 16, 0, 65518, 16, 0, 65519, 16, 0, 65520, 11, 0, 131045, 16, 0, 131046, 16, 0, 131047, 16, 0, 131048, 16, 0, 131049, 16, 0, 131050, 16, 0, 131051, 16, 0, 131052, 16, 0, 131053, 16, 0, 131054, 16, 0, 131055, 16, 0, 131056, 11, 0, 196581, 16, 0, 196582, 16, 0, 196583, 16, 0, 196584, 16, 0, 196585, 16, 0, 196586, 16, 0, 196587, 16, 0, 196588, 16, 0, 196589, 16, 0, 196590, 16, 0, 196591, 16, 0, 196592, 11, 0, 262117, 16, 0, 262118, 16, 0, 262119, 16, 0, 262120, 16, 0, 262121, 16, 0, 262122, 16, 0, 262123, 16, 0, 262124, 16, 0, 262125, 16, 0, 262126, 16, 0, 262127, 16, 0, 262128, 11, 0, 327653, 16, 0, 327654, 16, 0, 327655, 16, 0, 327656, 16, 0, 327657, 16, 0, 327658, 16, 0, 327659, 16, 0, 327660, 16, 0, 327661, 16, 0, 327662, 16, 0, 327663, 16, 0, 327664, 11, 0, 393189, 16, 0, 393190, 16, 0, 393191, 16, 0, 393192, 16, 0, 393193, 16, 0, 393194, 16, 0, 393195, 16, 0, 393196, 16, 0, 393197, 16, 0, 393198, 16, 0, 393199, 16, 0, 393200, 11, 0, 458725, 16, 0, 458726, 16, 0, 458727, 16, 0, 458728, 16, 0, 458729, 16, 0, 458730, 16, 0, 458731, 16, 0, 458732, 16, 0, 458733, 16, 0, 458734, 16, 0, 458735, 16, 0, 458736, 11, 0, 524261, 16, 0, 524262, 16, 0, 524263, 16, 0, 524264, 16, 0, 524265, 16, 0, 524266, 16, 0, 524267, 16, 0, 524268, 16, 0, 524269, 16, 0, 524270, 16, 0, 524271, 16, 0, 524272, 11, 0, 589797, 16, 0, 589798, 16, 0, 589799, 16, 0, 589800, 16, 0, 589801, 16, 0, 589802, 16, 0, 589803, 16, 0, 589804, 16, 0, 589805, 16, 0, 589806, 16, 0, 589807, 16, 0, 589808, 11, 0, 655333, 16, 0, 655334, 16, 0, 655335, 16, 0, 655336, 16, 0, 655337, 16, 0, 655338, 16, 0, 655339, 16, 0, 655340, 16, 0, 655341, 16, 0, 655342, 16, 0, 655343, 16, 0, 655344, 11, 0, 589860, 14, 0, 589861, 2, 0, 589862, 2, 0, 589863, 2, 0, 589864, 2, 0, 589865, 2, 0, 589866, 0, 0, 720869, 16, 0, 720870, 16, 0, 720871, 16, 0, 720872, 16, 0, 720873, 16, 0, 720874, 16, 0, 720875, 16, 0, 720876, 16, 0, 720877, 16, 0, 720878, 16, 0, 720879, 16, 0, 720880, 11, 0, 655393, 14, 0, 655394, 2, 0, 655395, 2, 0, 655396, 25, 0, 655397, 16, 0, 655398, 16, 0, 655399, 16, 0, 655400, 16, 0, 655401, 16, 0, 655402, 24, 0, 655403, 20, 0, 655404, 20, 0, 655405, 0, 0, 786405, 16, 0, 786406, 16, 0, 786407, 16, 0, 786408, 16, 0, 786409, 16, 0, 786410, 16, 0, 786411, 16, 0, 786412, 16, 0, 786413, 16, 0, 786414, 16, 0, 786415, 16, 0, 786416, 11, 0, 720929, 35, 0, 720930, 16, 0, 720931, 16, 0, 720932, 16, 0, 720933, 16, 0, 720934, 16, 0, 720935, 16, 0, 720936, 16, 0, 720937, 16, 0, 720938, 16, 0, 720939, 16, 0, 720940, 16, 0, 720941, 24, 0, 720942, 21, 0, 851941, 16, 0, 851942, 16, 0, 851943, 16, 0, 851944, 16, 0, 851945, 16, 0, 851946, 16, 0, 851947, 16, 0, 851948, 16, 0, 851949, 16, 0, 851950, 16, 0, 851951, 16, 0, 851952, 11, 0, 786465, 35, 0, 786466, 16, 0, 786467, 16, 0, 786468, 16, 0, 786469, 16, 0, 786470, 16, 0, 786471, 16, 0, 786472, 16, 0, 786473, 16, 0, 786474, 16, 0, 786475, 16, 0, 786476, 16, 0, 786477, 16, 0, 786478, 24, 0, 786479, 20, 0, 786480, 20, 0, 786481, 20, 0, 786482, 20, 0, 786483, 21, 0, 917477, 16, 0, 917478, 16, 0, 917479, 16, 0, 917480, 16, 0, 917481, 16, 0, 917482, 16, 0, 917483, 16, 0, 917484, 16, 0, 917485, 16, 0, 917486, 16, 0, 917487, 16, 0, 917488, 11, 0, 851996, 1, 0, 851997, 4, 0, 852001, 35, 0, 852002, 16, 0, 852003, 16, 0, 852004, 16, 0, 852005, 16, 0, 852006, 16, 0, 852007, 16, 0, 852008, 16, 0, 852009, 16, 0, 852010, 16, 0, 852011, 16, 0, 852012, 16, 0, 852013, 16, 0, 852014, 16, 0, 852015, 16, 0, 852016, 16, 0, 852017, 16, 0, 852018, 16, 0, 852019, 11, 0, 983013, 16, 0, 983014, 16, 0, 983015, 16, 0, 983016, 16, 0, 983017, 16, 0, 983018, 16, 0, 983019, 16, 0, 983020, 16, 0, 983021, 16, 0, 983022, 16, 0, 983023, 16, 0, 983024, 11, 0, 917528, 1, 0, 917529, 4, 0, 917532, 5, 0, 917533, 6, 0, 917537, 35, 0, 917538, 16, 0, 917539, 16, 0, 917540, 16, 0, 917541, 16, 0, 917542, 16, 0, 917543, 16, 0, 917544, 16, 0, 917545, 16, 0, 917546, 16, 0, 917547, 16, 0, 917548, 16, 0, 917549, 16, 0, 917550, 16, 0, 917551, 16, 0, 917552, 16, 0, 917553, 16, 0, 917554, 16, 0, 917555, 11, 0, 1048549, 16, 0, 1048550, 16, 0, 1048551, 16, 0, 1048552, 16, 0, 1048553, 16, 0, 1048554, 16, 0, 1048555, 16, 0, 1048556, 16, 0, 1048557, 16, 0, 1048558, 16, 0, 1048559, 16, 0, 1048560, 11, 0, 983053, 1, 0, 983054, 4, 0, 983064, 5, 0, 983065, 6, 0, 983073, 35, 0, 983074, 16, 0, 983075, 16, 0, 983076, 16, 0, 983077, 16, 0, 983078, 16, 0, 983079, 16, 0, 983080, 16, 0, 983081, 16, 0, 983082, 16, 0, 983083, 16, 0, 983084, 16, 0, 983085, 16, 0, 983086, 16, 0, 983087, 16, 0, 983088, 16, 0, 983089, 16, 0, 983090, 16, 0, 983091, 11, 0, 1114085, 16, 0, 1114086, 16, 0, 1114087, 16, 0, 1114088, 16, 0, 1114089, 16, 0, 1114090, 16, 0, 1114091, 16, 0, 1114092, 16, 0, 1114093, 16, 0, 1114094, 16, 0, 1114095, 16, 0, 1114096, 11, 0, 1048589, 7, 0, 1048590, 38, 0, 1048609, 35, 0, 1048610, 16, 0, 1048611, 16, 0, 1048612, 16, 0, 1048613, 16, 0, 1048614, 16, 0, 1048615, 16, 0, 1048616, 16, 0, 1048617, 16, 0, 1048618, 16, 0, 1048619, 16, 0, 1048620, 16, 0, 1048621, 16, 0, 1048622, 16, 0, 1048623, 16, 0, 1048624, 16, 0, 1048625, 16, 0, 1048626, 16, 0, 1048627, 11, 0, 1179621, 16, 0, 1179622, 16, 0, 1179623, 16, 0, 1179624, 16, 0, 1179625, 16, 0, 1179626, 16, 0, 1179627, 16, 0, 1179628, 16, 0, 1179629, 16, 0, 1179630, 16, 0, 1179631, 16, 0, 1179632, 24, 0, 1179633, 2, 0, 1179634, 2, 0, 1179635, 2, 0, 1179636, 2, 0, 1179637, 2, 0, 1179638, 2, 0, 1179639, 2, 0, 1179640, 2, 0, 1179641, 2, 0, 1179642, 2, 0, 1179643, 2, 0, 1179644, 2, 0, 1179645, 2, 0, 1179646, 2, 0, 1179647, 2, 0, 1114112, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 20, 0, 1114117, 20, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1114137, 2, 0, 1114138, 2, 0, 1114139, 2, 0, 1114140, 2, 0, 1114141, 2, 0, 1114142, 2, 0, 1114143, 2, 0, 1114144, 2, 0, 1114145, 25, 0, 1114146, 16, 0, 1114147, 16, 0, 1114148, 16, 0, 1114149, 16, 0, 1114150, 16, 0, 1114151, 16, 0, 1114152, 16, 0, 1114153, 16, 0, 1114154, 16, 0, 1114155, 16, 0, 1114156, 16, 0, 1114157, 16, 0, 1114158, 16, 0, 1114159, 16, 0, 1114160, 16, 0, 1114161, 16, 0, 1114162, 16, 0, 1114163, 24, 0, 1114164, 20, 0, 1114165, 20, 0, 1114166, 20, 0, 1114167, 20, 0, 1114168, 20, 0, 1114169, 20, 0, 1114170, 20, 0, 1114171, 20, 0, 1114172, 20, 0, 1114173, 20, 0, 1114174, 20, 0, 1114175, 20, 0, 1114176, 20, 0, 1114177, 20, 0, 1114178, 20, 0, 1114179, 20, 0, 1114180, 20, 0, 1114181, 20, 0, 1114182, 20, 0, 1114183, 20, 0, 1114184, 20, 0, 1114185, 20, 0, 1114186, 20, 0, 1114187, 20, 0, 1114188, 20, 0, 1114189, 20, 0, 1114190, 20, 0, 1114191, 20, 0, 1114192, 20, 0, 1114193, 20, 0, 1114194, 20, 0, 1114195, 20, 0, 1114196, 20, 0, 1114197, 20, 0, 1114198, 20, 0, 1114199, 20, 0, 1114200, 20, 0, 1114201, 20, 0, 1114202, 20, 0, 1245157, 16, 0, 1245158, 16, 0, 1245159, 16, 0, 1245160, 16, 0, 1245161, 16, 0, 1245162, 16, 0, 1245163, 16, 0, 1245164, 16, 0, 1245165, 16, 0, 1245166, 16, 0, 1245167, 16, 0, 1245168, 16, 0, 1245169, 16, 0, 1245170, 16, 0, 1245171, 16, 0, 1245172, 16, 0, 1245173, 16, 0, 1245174, 16, 0, 1245175, 16, 0, 1245176, 16, 0, 1245177, 16, 0, 1245178, 16, 0, 1245179, 16, 0, 1245180, 16, 0, 1245181, 16, 0, 1245182, 16, 0, 1245183, 16, 0, 1179648, 16, 0, 1179649, 16, 0, 1179650, 16, 0, 1179651, 16, 0, 1179652, 16, 0, 1179653, 16, 0, 1179654, 16, 0, 1179655, 16, 0, 1179656, 16, 0, 1179657, 16, 0, 1179658, 16, 0, 1179659, 16, 0, 1179660, 16, 0, 1179661, 16, 0, 1179662, 16, 0, 1179663, 16, 0, 1179664, 16, 0, 1179665, 16, 0, 1179666, 16, 0, 1179667, 16, 0, 1179668, 16, 0, 1179669, 16, 0, 1179670, 16, 0, 1179671, 16, 0, 1179672, 16, 0, 1179673, 16, 0, 1179674, 16, 0, 1179675, 16, 0, 1179676, 16, 0, 1179677, 16, 0, 1179678, 16, 0, 1179679, 16, 0, 1179680, 16, 0, 1179681, 16, 0, 1179682, 16, 0, 1179683, 16, 0, 1179684, 16, 0, 1179685, 16, 0, 1179686, 16, 0, 1179687, 16, 0, 1179688, 16, 0, 1179689, 16, 0, 1179690, 16, 0, 1179691, 16, 0, 1179692, 16, 0, 1179693, 16, 0, 1179694, 16, 0, 1179695, 16, 0, 1179696, 16, 0, 1179697, 16, 0, 1179698, 16, 0, 1179699, 16, 0, 1179700, 16, 0, 1179701, 16, 0, 1179702, 16, 0, 1179703, 16, 0, 1179704, 16, 0, 1179705, 16, 0, 1179706, 16, 0, 1179707, 16, 0, 1179708, 16, 0, 1179709, 16, 0, 1179710, 16, 0, 1179711, 16, 0, 1179712, 16, 0, 1179713, 16, 0, 1179714, 16, 0, 1179715, 16, 0, 1179716, 16, 0, 1179717, 16, 0, 1179718, 16, 0, 1179719, 16, 0, 1179720, 16, 0, 1179721, 16, 0, 1179722, 16, 0, 1179723, 16, 0, 1179724, 16, 0, 1179725, 16, 0, 1179726, 16, 0, 1179727, 16, 0, 1179728, 16, 0, 1179729, 16, 0, 1179730, 16, 0, 1179731, 16, 0, 1179732, 16, 0, 1179733, 16, 0, 1179734, 16, 0, 1179735, 16, 0, 1179736, 16, 0, 1179737, 16, 0, 1179738, 16, 0, 1310693, 16, 0, 1310694, 16, 0, 1310695, 16, 0, 1310696, 16, 0, 1310697, 16, 0, 1310698, 16, 0, 1310699, 16, 0, 1310700, 16, 0, 1310701, 16, 0, 1310702, 16, 0, 1310703, 16, 0, 1310704, 16, 0, 1310705, 16, 0, 1310706, 16, 0, 1310707, 16, 0, 1310708, 16, 0, 1310709, 16, 0, 1310710, 16, 0, 1310711, 16, 0, 1310712, 16, 0, 1310713, 16, 0, 1310714, 16, 0, 1310715, 16, 0, 1310716, 16, 0, 1310717, 16, 0, 1310718, 16, 0, 1310719, 16, 0, 1245184, 16, 0, 1245185, 16, 0, 1245186, 16, 0, 1245187, 16, 0, 1245188, 16, 0, 1245189, 16, 0, 1245190, 16, 0, 1245191, 16, 0, 1245192, 16, 0, 1245193, 16, 0, 1245194, 16, 0, 1245195, 16, 0, 1245196, 16, 0, 1245197, 16, 0, 1245198, 16, 0, 1245199, 16, 0, 1245200, 16, 0, 1245201, 16, 0, 1245202, 16, 0, 1245203, 16, 0, 1245204, 16, 0, 1245205, 16, 0, 1245206, 16, 0, 1245207, 16, 0, 1245208, 16, 0, 1245209, 16, 0, 1245210, 16, 0, 1245211, 16, 0, 1245212, 16, 0, 1245213, 16, 0, 1245214, 16, 0, 1245215, 16, 0, 1245216, 16, 0, 1245217, 16, 0, 1245218, 16, 0, 1245219, 16, 0, 1245220, 16, 0, 1245221, 16, 0, 1245222, 16, 0, 1245223, 16, 0, 1245224, 16, 0, 1245225, 16, 0, 1245226, 16, 0, 1245227, 16, 0, 1245228, 16, 0, 1245229, 16, 0, 1245230, 16, 0, 1245231, 16, 0, 1245232, 16, 0, 1245233, 16, 0, 1245234, 16, 0, 1245235, 16, 0, 1245236, 16, 0, 1245237, 16, 0, 1245238, 16, 0, 1245239, 16, 0, 1245240, 16, 0, 1245241, 16, 0, 1245242, 16, 0, 1245243, 16, 0, 1245244, 16, 0, 1245245, 16, 0, 1245246, 16, 0, 1245247, 16, 0, 1245248, 16, 0, 1245249, 16, 0, 1245250, 16, 0, 1245251, 16, 0, 1245252, 16, 0, 1245253, 16, 0, 1245254, 16, 0, 1245255, 16, 0, 1245256, 16, 0, 1245257, 16, 0, 1245258, 16, 0, 1245259, 16, 0, 1245260, 16, 0, 1245261, 16, 0, 1245262, 16, 0, 1245263, 16, 0, 1245264, 16, 0, 1245265, 16, 0, 1245266, 16, 0, 1245267, 16, 0, 1245268, 16, 0, 1245269, 16, 0, 1245270, 16, 0, 1245271, 16, 0, 1245272, 16, 0, 1245273, 16, 0, 1245274, 16, 0, 1376229, 16, 0, 1376230, 16, 0, 1376231, 16, 0, 1376232, 16, 0, 1376233, 16, 0, 1376234, 16, 0, 1376235, 16, 0, 1376236, 16, 0, 1376237, 16, 0, 1376238, 16, 0, 1376239, 16, 0, 1376240, 16, 0, 1376241, 16, 0, 1376242, 16, 0, 1376243, 16, 0, 1376244, 16, 0, 1376245, 16, 0, 1376246, 16, 0, 1376247, 16, 0, 1376248, 16, 0, 1376249, 16, 0, 1376250, 16, 0, 1376251, 16, 0, 1376252, 16, 0, 1376253, 16, 0, 1376254, 16, 0, 1376255, 16, 0, 1310720, 16, 0, 1310721, 16, 0, 1310722, 16, 0, 1310723, 16, 0, 1310724, 16, 0, 1310725, 16, 0, 1310726, 16, 0, 1310727, 16, 0, 1310728, 16, 0, 1310729, 16, 0, 1310730, 16, 0, 1310731, 16, 0, 1310732, 16, 0, 1310733, 16, 0, 1310734, 16, 0, 1310735, 16, 0, 1310736, 16, 0, 1310737, 16, 0, 1310738, 16, 0, 1310739, 16, 0, 1310740, 16, 0, 1310741, 16, 0, 1310742, 16, 0, 1310743, 16, 0, 1310744, 16, 0, 1310745, 16, 0, 1310746, 16, 0, 1310747, 16, 0, 1310748, 16, 0, 1310749, 16, 0, 1310750, 16, 0, 1310751, 16, 0, 1310752, 16, 0, 1310753, 16, 0, 1310754, 16, 0, 1310755, 16, 0, 1310756, 16, 0, 1310757, 16, 0, 1310758, 16, 0, 1310759, 16, 0, 1310760, 16, 0, 1310761, 16, 0, 1310762, 16, 0, 1310763, 16, 0, 1310764, 16, 0, 1310765, 16, 0, 1310766, 16, 0, 1310767, 16, 0, 1310768, 16, 0, 1310769, 16, 0, 1310770, 16, 0, 1310771, 16, 0, 1310772, 16, 0, 1310773, 16, 0, 1310774, 16, 0, 1310775, 16, 0, 1310776, 16, 0, 1310777, 16, 0, 1310778, 16, 0, 1310779, 16, 0, 1310780, 16, 0, 1310781, 16, 0, 1310782, 16, 0, 1310783, 16, 0, 1310784, 16, 0, 1310785, 16, 0, 1310786, 16, 0, 1310787, 16, 0, 1310788, 16, 0, 1310789, 16, 0, 1310790, 16, 0, 1310791, 16, 0, 1310792, 16, 0, 1310793, 16, 0, 1310794, 16, 0, 1310795, 16, 0, 1310796, 16, 0, 1310797, 16, 0, 1310798, 16, 0, 1310799, 16, 0, 1310800, 16, 0, 1310801, 16, 0, 1310802, 16, 0, 1310803, 16, 0, 1310804, 16, 0, 1310805, 16, 0, 1310806, 16, 0, 1310807, 16, 0, 1310808, 16, 0, 1310809, 16, 0, 1310810, 16, 0, 1441765, 16, 0, 1441766, 16, 0, 1441767, 16, 0, 1441768, 16, 0, 1441769, 16, 0, 1441770, 16, 0, 1441771, 16, 0, 1441772, 16, 0, 1441773, 16, 0, 1441774, 16, 0, 1441775, 16, 0, 1441776, 16, 0, 1441777, 16, 0, 1441778, 16, 0, 1441779, 16, 0, 1441780, 16, 0, 1441781, 16, 0, 1441782, 16, 0, 1441783, 16, 0, 1441784, 16, 0, 1441785, 16, 0, 1441786, 16, 0, 1441787, 16, 0, 1441788, 16, 0, 1441789, 16, 0, 1441790, 16, 0, 1441791, 16, 0, 1376256, 16, 0, 1376257, 16, 0, 1376258, 16, 0, 1376259, 16, 0, 1376260, 16, 0, 1376261, 16, 0, 1376262, 16, 0, 1376263, 16, 0, 1376264, 16, 0, 1376265, 16, 0, 1376266, 16, 0, 1376267, 16, 0, 1376268, 16, 0, 1376269, 16, 0, 1376270, 16, 0, 1376271, 16, 0, 1376272, 16, 0, 1376273, 16, 0, 1376274, 16, 0, 1376275, 16, 0, 1376276, 16, 0, 1376277, 16, 0, 1376278, 16, 0, 1376279, 16, 0, 1376280, 16, 0, 1376281, 16, 0, 1376282, 16, 0, 1376283, 16, 0, 1376284, 16, 0, 1376285, 16, 0, 1376286, 16, 0, 1376287, 16, 0, 1376288, 16, 0, 1376289, 16, 0, 1376290, 16, 0, 1376291, 16, 0, 1376292, 16, 0, 1376293, 16, 0, 1376294, 16, 0, 1376295, 16, 0, 1376296, 16, 0, 1376297, 16, 0, 1376298, 16, 0, 1376299, 16, 0, 1376300, 16, 0, 1376301, 16, 0, 1376302, 16, 0, 1376303, 16, 0, 1376304, 16, 0, 1376305, 16, 0, 1376306, 16, 0, 1376307, 16, 0, 1376308, 16, 0, 1376309, 16, 0, 1376310, 16, 0, 1376311, 16, 0, 1376312, 16, 0, 1376313, 16, 0, 1376314, 16, 0, 1376315, 16, 0, 1376316, 16, 0, 1376317, 16, 0, 1376318, 16, 0, 1376319, 16, 0, 1376320, 16, 0, 1376321, 16, 0, 1376322, 16, 0, 1376323, 16, 0, 1376324, 16, 0, 1376325, 16, 0, 1376326, 16, 0, 1376327, 16, 0, 1376328, 16, 0, 1376329, 16, 0, 1376330, 16, 0, 1376331, 16, 0, 1376332, 16, 0, 1376333, 16, 0, 1376334, 16, 0, 1376335, 16, 0, 1376336, 16, 0, 1376337, 16, 0, 1376338, 16, 0, 1376339, 16, 0, 1376340, 16, 0, 1376341, 16, 0, 1376342, 16, 0, 1376343, 16, 0, 1376344, 16, 0, 1376345, 16, 0, 1376346, 16, 0, 1507301, 16, 0, 1507302, 16, 0, 1507303, 16, 0, 1507304, 16, 0, 1507305, 16, 0, 1507306, 16, 0, 1507307, 16, 0, 1507308, 16, 0, 1507309, 16, 0, 1507310, 16, 0, 1507311, 16, 0, 1507312, 16, 0, 1507313, 16, 0, 1507314, 16, 0, 1507315, 16, 0, 1507316, 16, 0, 1507317, 16, 0, 1507318, 16, 0, 1507319, 16, 0, 1507320, 16, 0, 1507321, 16, 0, 1507322, 16, 0, 1507323, 16, 0, 1507324, 16, 0, 1507325, 16, 0, 1507326, 16, 0, 1507327, 16, 0, 1441792, 16, 0, 1441793, 16, 0, 1441794, 16, 0, 1441795, 16, 0, 1441796, 16, 0, 1441797, 16, 0, 1441798, 16, 0, 1441799, 16, 0, 1441800, 16, 0, 1441801, 16, 0, 1441802, 16, 0, 1441803, 16, 0, 1441804, 16, 0, 1441805, 16, 0, 1441806, 16, 0, 1441807, 16, 0, 1441808, 16, 0, 1441809, 16, 0, 1441810, 16, 0, 1441811, 16, 0, 1441812, 16, 0, 1441813, 16, 0, 1441814, 16, 0, 1441815, 16, 0, 1441816, 16, 0, 1441817, 16, 0, 1441818, 16, 0, 1441819, 16, 0, 1441820, 16, 0, 1441821, 16, 0, 1441822, 16, 0, 1441823, 16, 0, 1441824, 16, 0, 1441825, 16, 0, 1441826, 16, 0, 1441827, 16, 0, 1441828, 16, 0, 1441829, 16, 0, 1441830, 16, 0, 1441831, 16, 0, 1441832, 16, 0, 1441833, 16, 0, 1441834, 16, 0, 1441835, 16, 0, 1441836, 16, 0, 1441837, 16, 0, 1441838, 16, 0, 1441839, 16, 0, 1441840, 16, 0, 1441841, 16, 0, 1441842, 16, 0, 1441843, 16, 0, 1441844, 16, 0, 1441845, 16, 0, 1441846, 16, 0, 1441847, 16, 0, 1441848, 16, 0, 1441849, 16, 0, 1441850, 16, 0, 1441851, 16, 0, 1441852, 16, 0, 1441853, 16, 0, 1441854, 16, 0, 1441855, 16, 0, 1441856, 16, 0, 1441857, 16, 0, 1441858, 16, 0, 1441859, 16, 0, 1441860, 16, 0, 1441861, 16, 0, 1441862, 16, 0, 1441863, 16, 0, 1441864, 16, 0, 1441865, 16, 0, 1441866, 16, 0, 1441867, 16, 0, 1441868, 16, 0, 1441869, 16, 0, 1441870, 16, 0, 1441871, 16, 0, 1441872, 16, 0, 1441873, 16, 0, 1441874, 16, 0, 1441875, 16, 0, 1441876, 16, 0, 1441877, 16, 0, 1441878, 16, 0, 1441879, 16, 0, 1441880, 16, 0, 1441881, 16, 0, 1441882, 16, 0, 1572837, 16, 0, 1572838, 16, 0, 1572839, 16, 0, 1572840, 16, 0, 1572841, 16, 0, 1572842, 16, 0, 1572843, 16, 0, 1572844, 16, 0, 1572845, 16, 0, 1572846, 16, 0, 1572847, 16, 0, 1572848, 16, 0, 1572849, 16, 0, 1572850, 16, 0, 1572851, 16, 0, 1572852, 16, 0, 1572853, 16, 0, 1572854, 16, 0, 1572855, 16, 0, 1572856, 16, 0, 1572857, 16, 0, 1572858, 16, 0, 1572859, 16, 0, 1572860, 16, 0, 1572861, 16, 0, 1572862, 16, 0, 1572863, 16, 0, 1507328, 16, 0, 1507329, 16, 0, 1507330, 16, 0, 1507331, 16, 0, 1507332, 16, 0, 1507333, 16, 0, 1507334, 16, 0, 1507335, 16, 0, 1507336, 16, 0, 1507337, 16, 0, 1507338, 16, 0, 1507339, 16, 0, 1507340, 16, 0, 1507341, 16, 0, 1507342, 16, 0, 1507343, 16, 0, 1507344, 16, 0, 1507345, 16, 0, 1507346, 16, 0, 1507347, 16, 0, 1507348, 16, 0, 1507349, 16, 0, 1507350, 16, 0, 1507351, 16, 0, 1507352, 16, 0, 1507353, 16, 0, 1507354, 16, 0, 1507355, 16, 0, 1507356, 16, 0, 1507357, 16, 0, 1507358, 16, 0, 1507359, 16, 0, 1507360, 16, 0, 1507361, 16, 0, 1507362, 16, 0, 1507363, 16, 0, 1507364, 16, 0, 1507365, 16, 0, 1507366, 16, 0, 1507367, 16, 0, 1507368, 16, 0, 1507369, 16, 0, 1507370, 16, 0, 1507371, 16, 0, 1507372, 16, 0, 1507373, 16, 0, 1507374, 16, 0, 1507375, 16, 0, 1507376, 16, 0, 1507377, 16, 0, 1507378, 16, 0, 1507379, 16, 0, 1507380, 16, 0, 1507381, 16, 0, 1507382, 16, 0, 1507383, 16, 0, 1507384, 16, 0, 1507385, 16, 0, 1507386, 16, 0, 1507387, 16, 0, 1507388, 16, 0, 1507389, 16, 0, 1507390, 16, 0, 1507391, 16, 0, 1507392, 16, 0, 1507393, 16, 0, 1507394, 16, 0, 1507395, 16, 0, 1507396, 16, 0, 1507397, 16, 0, 1507398, 16, 0, 1507399, 16, 0, 1507400, 16, 0, 1507401, 16, 0, 1507402, 16, 0, 1507403, 16, 0, 1507404, 16, 0, 1507405, 16, 0, 1507406, 16, 0, 1507407, 16, 0, 1507408, 16, 0, 1507409, 16, 0, 1507410, 16, 0, 1507411, 16, 0, 1507412, 16, 0, 1507413, 16, 0, 1507414, 16, 0, 1507415, 16, 0, 1507416, 16, 0, 1507417, 16, 0, 1507418, 16, 0 )

[node name="Enemy2" parent="." instance=ExtResource( 6 )]
position = Vector2( 635, 133 )

[node name="Enemy" parent="." instance=ExtResource( 6 )]
position = Vector2( 311, 262 )
amount = 20

[node name="Enemy3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1004, 260 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 109.0
margin_bottom = 40.0
rect_clip_content = true

[node name="Heart1" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 3.0
margin_top = 3.0
margin_right = 34.0
margin_bottom = 37.0
texture = ExtResource( 2 )
expand = true

[node name="Heart2" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 37.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 37.0
texture = ExtResource( 2 )
expand = true

[node name="Heart3" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 71.0
margin_top = 3.0
margin_right = 102.0
margin_bottom = 37.0
texture = ExtResource( 2 )
expand = true
